# learn_through_courses

./: ML_DL_Learning_Agenda_v20211228.xlsx  README.md
Deep_Learning_A_Z/: DL_A_Z_Colab_Run_Instructions-.ipynb
Learn GenAI Python/1 DL.ai - LangChain for LLM/: L1-Model_prompt_parser.ipynb  L2-Memory.ipynb  L6-Agents.ipynb
Learn GenAI Python/2 DL.ai - Functions, Tools and Agents with LangChain/: L1-openai_functions_student.ipynb  L2-lcel-student.ipynb  L3-function-calling-student.ipynb
Learn GenAI Python/3 DL.ai - RAG - UMAP, Rephrasing, Reranking/: L1-student.ipynb  L2-student.ipynb  L3-student.ipynb  L5-student.ipynb
Learn GenAI Python/4 DL.ai - CrewAi/: L2_research_write_article.ipynb
Learn GenAI Python/4 DL.ai - CrewAi/learn_multiagents/: README.md  pyproject.toml
Learn GenAI Python/4 DL.ai - CrewAi/learn_multiagents/src/: crew.py  main.py
Learn GenAI Python/DL.ai - LangChain for LLM/: L3-Chains.ipynb  L4-QnA.ipynb
Notebook_Learnings/: Learn_Numpy.ipynb  Learn_Pandas.ipynb  Learnings_Needed.txt  Matplotlib.ipynb  compositionClass.py  dataClass_test.py  itertools_practise.ipynb  learn_histogram_bins.ipynb  learn_sampling.ipynb  retail_plots.ipynb
Notebook_Learnings/pipeline_learnings/: learn1.ipynb  learn2.ipynb  learn3.ipynb  utils.py
Probabilistic_Graphical_Models_Coursera/Wk_1/: assignment.xlsx
TensorFlow_Coursera/: requirements.txt
Udemy_PyTorch_for_DL/: Test.ipynb
Udemy_PyTorch_for_DL/PYTORCH_NOTEBOOKS/: README.md
python_handson/basic/: calculate_with_input.ipynb  calculate_with_input_solution.ipynb  input_age.ipynb
(+57 files in other folders)
